* Fixed placeholderFillStyle flicker (#727)
* Fix for Chrome (v45) issue that key is sometimes undefined outside of the for-in loop (#730)
* World.removeAll now cancels any in-flight image loads; same for Viewer.open and Viewer.close (#734)
* Optimized adding large numbers of items to the world with collectionMode (#735)

2.0.0:

* True multi-image mode (#450)
    * BREAKING CHANGE: Passing an array for the tileSources option is no longer enough to trigger sequence mode; you have to set the sequenceMode option to true as well
    * BREAKING CHANGE: Navigator no longer sends an open event when its viewer opens
    * BREAKING CHANGE: Viewer.drawers and Viewer.drawersContainer no longer exist
    * BREAKING CHANGE: A Viewer's Drawer and Viewport are now made once per Viewer and reused for every image that Viewer opens (rather than being recreated for every open); this means if you change Viewer options between opens, the behavior is different now.
    * DEPRECATION: use Viewer.addTiledImage instead of Viewer.addLayer
        * addTiledImage supports positioning config properties
    * DEPRECATION: use World.getItemAt instead of Viewer.getLayerAtLevel
    * DEPRECATION: use World.getIndexOfItem instead of Viewer.getLevelOfLayer
    * DEPRECATION: use World.getItemCount instead of Viewer.getLayersCount
    * DEPRECATION: use World.setItemIndex instead of Viewer.setLayerLevel
    * DEPRECATION: use World.removeItem instead of Viewer.removeLayer
    * DEPRECATION: use World.needsDraw instead of Drawer.needsUpdate
    * DEPRECATION: use TileCache.numTilesLoaded instead of Drawer.numTilesLoaded
    * DEPRECATION: use World.resetItems instead of Drawer.reset
    * DEPRECATION: use Drawer.clear and World.draw instead of Drawer.update
    * DEPRECATION: the layersAspectRatioEpsilon option is no longer necessary
    * DEPRECATION: Viewer's add-layer event is now World's add-item event
    * DEPRECATION: Viewer's layer-level-changed event is now World's item-index-change event